project draft update

--- a/project_draft.ipynb
+++ b/project_draft.ipynb
@@ -13,7 +13,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cryo-electron microscopy (cryo-EM) is a powerful imaging technique that has transformed structural biology research by enabling high-resolution 3D reconstructions of complex biological macromolecules such as proteins. The process involves collection of tens of thousands of 2D images in a single run, which are then processed using specialized software to generate a detailed 3D model of electron density.\n",
+    "\n",
+    "Despite the significant advancements in cryo-EM technology, current reconstruction algorithms, whether traditional or deep learning-based, are time-consuming and require hundreds of thousands of images to achieve high-resolution reconstructions. To accelerate the processing of cryo-EM data for downstream structural biology tasks, innovative methods for 3D reconstruction from 2D output projections are needed.\n",
+    "\n",
+    "In this study, we focus on the task of single-particle analysis, where an individual particle is analyzed from 2D images and then reconstructed in 3D space. Our aim is to develop a reconstruction function that preserves the symmetries present in the data by being equivariant to the group SO(3) of 3D rotations. We investigate whether using SO(3)-equivariant neural networks, specifically spherical CNNs, can successfully perform cryo-EM reconstruction. We additionally measure potential improvements in performance and sample efficiency over previous algorithms without compromising the resolution of reconstruction."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Related Work ##"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the leading learning-based approaches for cryo-EM reconstruction is cryoDRGN, which leverages a deep generative model of 3D structure from single-particle 2D images [1]. CryoDRGN adopts an image-encoder-volume-decoder architecture, and the model is specified in the Fourier domain to relate 2D images as planar slices in 3D volume. This Fourier-based representation enables the model to efficiently capture detailed particle pose information from images. However, to achieve high-resolution reconstructions, cryoDRGN still requires a large number of images, often in the order of hundreds of thousands. While cryoDRGN is capable of handling heterogeneous reconstructions, where the protein may exhibit different conformational changes across images, we will evaluate its efficacy in our homogeneous reconstruction setting, where we assume all 2D images capture the protein at the same conformational state.\n",
+    " \n",
+    "Although not used from cryo-EM reconstruction, previous work has demonstrated that 3D object structure and pose can be predicted successfully from a single image using SO(3)-equivariant features [2]. The method, known as Image2Sphere, initially utilizes a vanilla convolutional neural network to extract features that are then projected onto a half-sphere. Next, the projected filter undergoes spherical convolution, which results in a signal that is equivariant to SO(3) rotation. Finally, a group convolution yields a distribution over SO(3) parameterized in the Fourier domain. We plan to employ a similar methodology for our task, but instead of single-image reconstruction, we will focus on multi-view reconstruction."
    ]
   },
   {
@@ -29,7 +51,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This project will involve using group convolutions to build up a convolutional neural network which operates on spherical embeddings. This includes concepts surrounding convolutions on SO(3) covered in class (e.g. applying the fourier transform on spherical harmonics). It also includes researching topics beyond the scope of the class such as projections of 2D images onto S2, and building equivariant models which operate directly on spherical embeddings. This project also involves extensive study of 3D reconstruction methods which are outside the scope of the class. Additionally, integrating equivariant methods with the reconstruction algorithms involves combining ideas from symmetry and representation theory with traditional computer vision and graphics methods. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Methods ##"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the Protein Data Bank (PDB) to collect experimentally-determined cryo-EM structures (13375 single-particle data points). For each data point, there is an electron density map in the form of a 3D array as well as 3D coordinates for every residue in the protein. We will use the 3D electron density map to generate m random projections and subsequently add Gaussian noise to the projection images, for use as the 2D images from which we will do reconstruction. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work.\n"
    ]
   },
   {
@@ -120,22 +158,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3921074 0.06126678125\n",
-      "1050347 0.07597996238425926\n"
-     ]
-    }
-   ],
    "source": [
-    "for id, pdr in  pdrs.items():\n",
-    "    print(len(pdr), len(pdr)/ np.size(content[id][\"3D_map\"]))"
+    "We then generate m (for now, 3) random projections of each PDR. We save these projections into a pickle."
    ]
   },
   {
@@ -147,13 +174,13 @@
     "shape = (256, 256)\n",
     "projection_dict = {}\n",
     "\n",
-    "# for pdb_id, pdr in pdrs.items():\n",
-    "#     cur_time = time.time()\n",
-    "#     random_projs = proj.random_projection(pdr, shape=shape, batch_size = 3)\n",
-    "#     print(f\"Random projection: {time.time() - cur_time}\")\n",
-    "#     for projection in random_projs:\n",
-    "#         proj.visualize_projection(projection)\n",
-    "#     projection_dict[pdb_id] = random_projs"
+    "for pdb_id, pdr in pdrs.items():\n",
+    "    cur_time = time.time()\n",
+    "    random_projs = proj.random_projection(pdr, shape=shape, batch_size = 3)\n",
+    "    print(f\"Random projection: {time.time() - cur_time}\")\n",
+    "    for projection in random_projs:\n",
+    "        proj.visualize_projection(projection)\n",
+    "    projection_dict[pdb_id] = random_projs"
    ]
   },
   {
@@ -172,6 +199,14 @@
    "metadata": {},
    "source": [
     "#### Projection onto Half-Sphere ####"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our methodology involves projecting each 2D image onto a half sphere as shown in the code below. These spherical signals are an input to a spherical CNN from which we extract features that are spatially local. These learned spherical embeddings should encode pose information, and we plan to experiment with the architecture and parameters of the spherical CNN such that this pose information is well captured. Specifically, we hope to show that these embeddings are empirically equivariant. Specifically, an R degree rotation of a 2D random projection should result in an R degree rotation of the corresponding embedding in the learned spherical latent space."
    ]
   },
   {
@@ -337,64 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualizing Embeddings ####"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ToS2Grid(lmax=4 res=100x101 (beta x alpha))\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "einsum(): subscript i has size 165 for operand 1 which does not broadcast with previously seen size 25",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT Year 2/Spring 2023/6.S966/cryo_reconstruction/project_draft.ipynb Cell 23\u001b[0m in \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT%20Year%202/Spring%202023/6.S966/cryo_reconstruction/project_draft.ipynb#Y122sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m to_grid \u001b[39m=\u001b[39m o3\u001b[39m.\u001b[39mToS2Grid(lmax, (\u001b[39m100\u001b[39m, \u001b[39m101\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT%20Year%202/Spring%202023/6.S966/cryo_reconstruction/project_draft.ipynb#Y122sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(to_grid)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT%20Year%202/Spring%202023/6.S966/cryo_reconstruction/project_draft.ipynb#Y122sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m signal \u001b[39m=\u001b[39m to_grid(convolved_embedding\u001b[39m.\u001b[39;49msqueeze(\u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mdetach())\u001b[39m.\u001b[39mpermute(\u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mnumpy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT%20Year%202/Spring%202023/6.S966/cryo_reconstruction/project_draft.ipynb#Y122sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m signal \u001b[39m=\u001b[39m (signal \u001b[39m-\u001b[39m signal\u001b[39m.\u001b[39mmin())\u001b[39m/\u001b[39m(signal\u001b[39m.\u001b[39mmax() \u001b[39m-\u001b[39m signal\u001b[39m.\u001b[39mmin())\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/divyanori/Library/CloudStorage/OneDrive-MassachusettsInstituteofTechnology/MIT%20Year%202/Spring%202023/6.S966/cryo_reconstruction/project_draft.ipynb#Y122sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m zeros_layer \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39m101\u001b[39m, \u001b[39m100\u001b[39m, \u001b[39m1\u001b[39m))\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/py3106/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/py3106/lib/python3.10/site-packages/e3nn/o3/_s2grid.py:392\u001b[0m, in \u001b[0;36mToS2Grid.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    389\u001b[0m size \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m    390\u001b[0m x \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, x\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[0;32m--> 392\u001b[0m x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49meinsum(\u001b[39m\"\u001b[39;49m\u001b[39mmbi,zi->zbm\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mshb, x)  \u001b[39m# [batch, beta, m]\u001b[39;00m\n\u001b[1;32m    394\u001b[0m sa, sm \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msha\u001b[39m.\u001b[39mshape\n\u001b[1;32m    395\u001b[0m \u001b[39mif\u001b[39;00m sa \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m sm \u001b[39mand\u001b[39;00m sa \u001b[39m%\u001b[39m \u001b[39m2\u001b[39m \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/py3106/lib/python3.10/site-packages/torch/functional.py:378\u001b[0m, in \u001b[0;36meinsum\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m    373\u001b[0m     \u001b[39mreturn\u001b[39;00m einsum(equation, \u001b[39m*\u001b[39m_operands)\n\u001b[1;32m    375\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(operands) \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2\u001b[39m \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m opt_einsum\u001b[39m.\u001b[39menabled:\n\u001b[1;32m    376\u001b[0m     \u001b[39m# the path for contracting 0 or 1 time(s) is already optimized\u001b[39;00m\n\u001b[1;32m    377\u001b[0m     \u001b[39m# or the user has disabled using opt_einsum\u001b[39;00m\n\u001b[0;32m--> 378\u001b[0m     \u001b[39mreturn\u001b[39;00m _VF\u001b[39m.\u001b[39;49meinsum(equation, operands)  \u001b[39m# type: ignore[attr-defined]\u001b[39;00m\n\u001b[1;32m    380\u001b[0m path \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    381\u001b[0m \u001b[39mif\u001b[39;00m opt_einsum\u001b[39m.\u001b[39mis_available():\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: einsum(): subscript i has size 165 for operand 1 which does not broadcast with previously seen size 25"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x300 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "fig = plt.figure(figsize=(10,3))\n",
-    "u = np.linspace(0, 2*np.pi, 100)\n",
-    "v = np.linspace(0, np.pi, 101)\n",
-    "x = np.outer(np.cos(u), np.sin(v))\n",
-    "y = np.outer(np.sin(u), np.sin(v))\n",
-    "z = np.outer(np.ones(np.size(u)), np.cos(v))\n",
-    "\n",
-    "to_grid = o3.ToS2Grid(lmax, (100, 101))\n",
-    "print(to_grid)\n",
-    "signal = to_grid(convolved_embedding.squeeze(0).detach()).permute(2, 1, 0).numpy()\n",
-    "signal = (signal - signal.min())/(signal.max() - signal.min())\n",
-    "zeros_layer = np.zeros((101, 100, 1))\n",
-    "signal_3channel = np.concatenate((zeros_layer, signal, zeros_layer), axis=2)\n",
-    "\n",
-    "ax3 = fig.add_subplot(1,3,3, projection='3d')\n",
-    "ax3.plot_surface(x, y, z, facecolors=signal_3channel)\n",
-    "\n",
-    "ax3.set_title(f\"harmonics of {pdb_id}\")"
+    "#### Sketch of Reconstruction Algorithm ####"
    ]
   },
   {
@@ -402,15 +380,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sketch of Reconstruction Algorithm ####"
+    "#### Experiments ####"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our training regime involves using several proteins and randomly simulated projections of the 3D structures onto 2D images. We use simulated data because real cryo-EM image data is often un-processed and spans several terabytes to petabytes in size, which is impractical to use for training. Using simulated images with added noise allows for more efficient training and inference protocols while showing a proof-of-concept of our model architecture.Our model architecture will be based on spherical CNNs used in prior works, as mentioned previously.\n",
+    "\n",
+    "During testing, we plan to run several experiments which vary m at inference time, allowing us to measure our model performance as a function of m. This will allow us to provide a tradeoff curve correlating data efficiency versus model accuracy. We also plan to run experiments to understand how our model performance is affected by the amount of noise in samples provided both at training and inference time. To assess the quality of reconstructions, we will compute how close our predicted structure is to the ground truth structure. We will also measure the resolution of our reconstruction for comparison to previous methods."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusions ####"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We hope to gain a better understanding of how data efficiency of cryo-EM reconstruction can be improved by using equivariant methods. We expect to see an improvement in data efficiency, with tradeoffs in model performance dependent on noise in image samples. We also hope to show how traditional reconstruction methods can be integrated with novel symmetry-preserving methods."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### References ####"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[1] https://www.nature.com/articles/s41592-020-01049-4\n",
+    "\n",
+    "[2] https://arxiv.org/pdf/2302.13926.pdf"
+   ]
   }
  ],
  "metadata": {
