--- a/project_draft.ipynb
+++ b/project_draft.ipynb
@@ -67,7 +67,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the Protein Data Bank (PDB) to collect experimentally-determined cryo-EM structures (13375 single-particle data points). For each data point, there is an electron density map in the form of a 3D array as well as 3D coordinates for every residue in the protein. We will use the 3D electron density map to generate m random projections and subsequently add Gaussian noise to the projection images, for use as the 2D images from which we will do reconstruction. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work.\n"
+    "### High-level Mathematical Formulation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $P$ be the electron density representation of a protein. Particularly, $P: \\mathbb{R}^3 \\rightarrow \\mathbb{R}$ specifies a density at every point in space. Note that proteins can also be represented as graph structures embedded in $\\mathbb{R}^3$, but we focus on the electron density representation since this is used to generate the inputs to our model, and is, ultimately, the desired output of the reconstruction model. Also, note that $P$ is very sparse/localized, as each protein has finite volume.\n",
+    "\n",
+    "Let $c$ be the canonical orthographic projection from $\\mathbb{R}^3$ to $\\mathbb{R}^2$. For example, we implement $c$ as \n",
+    "$$c = \\begin{bmatrix} 1 & 0 & 0 \\\\ 0 & 1 & 0 \\end{bmatrix}.$$\n",
+    "Then, we define a *random projection* of $P$ as $c(R(P))$ where $R \\in SO(3)$ is a uniformly random rotation. Note that in practice, each random projection is represented as a 2D image (with fixed resolution) rather than as a point cloud. \n",
+    "\n",
+    "Our model takes as input $m$ random projections of $P$, and aims to reconstruct $P$. So, we define $c_m$ as the operator which takes as input some 3D electron density map and outputs $m$ random projections (as images) via $cR$. And so, our model aims to reconstruct $P$ from $c_m(P)$. Note that although $c_m$ has been defined in a randomized way, henceforth we treat $c_m$ as a deterministic operator (e.g. we consider a single instance of $c_m$ that would be used for training/inference).\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experimental Techniques"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the Protein Data Bank (PDB) to collect experimentally-determined cryo-EM structures (13375 single-particle data points). For each data point, there is an electron density map in the form of a 3D array as well as 3D coordinates for every residue in the protein. We will use the 3D electron density map to generate $m$ random projections and subsequently add Gaussian noise to the projection images, for use as the 2D images from which we will do reconstruction. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work.\n"
    ]
   },
   {
@@ -82,7 +112,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'healpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmodels\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mso3_utils\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutils\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\devch\\Documents\\6.S966\\project\\cryo_reconstruction\\src\\models.py:9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnn\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39me3nn\u001b[39;00m \u001b[39mimport\u001b[39;00m o3\n\u001b[1;32m----> 9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mso3_utils\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutils\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mS2Conv\u001b[39;00m(nn\u001b[39m.\u001b[39mModule):\n\u001b[0;32m     12\u001b[0m \u001b[39m  \u001b[39m\u001b[39m'''S2 group convolution which outputs signal over SO(3) irreps\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \n\u001b[0;32m     14\u001b[0m \u001b[39m  :f_in: feature dimensionality of input signal\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[39m                and project to harmonics at every forward pass.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39m  '''\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\devch\\Documents\\6.S966\\project\\cryo_reconstruction\\src\\so3_utils.py:8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39me3nn\u001b[39;00m \u001b[39mimport\u001b[39;00m o3\n\u001b[1;32m----> 8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mhealpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mhp\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_trace\u001b[39m(rotA, rotB):\n\u001b[0;32m     12\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[39m    rotA, rotB are tensors of shape (*,3,3)\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[39m    returns Tr(rotA @ rotB.T)\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[39m    '''\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'healpy'"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import src.models as models\n",
@@ -100,12 +144,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We load the data as a dictionary of the form {pdb_id: {\"3D_map\": np.ndarray, \"structure\": np.ndarray}}. This dictionary is generated from the raw data csvs (downloaded from rcsb.org) using data_extraction.py"
+    "We load the data as a dictionary of the form `{pdb_id: {\"3D_map\": np.ndarray, \"structure\": np.ndarray}}`. This dictionary is generated from the raw data csvs (downloaded from rcsb.org) using data_extraction.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,21 +184,21 @@
     }
    ],
    "source": [
-    "pdrs = {}\n",
+    "pdas = {}\n",
     "\n",
     "for pdb_id, metadata in content.items():\n",
-    "    edm = metadata[\"3D_map\"]\n",
+    "    # get the 3D electron density map \n",
+    "    edm = metadata[\"3D_map\"] \n",
+    "    \n",
+    "    # we skip over ill-formed/noisy data \n",
     "    if np.count_nonzero(edm) > 0.5 * np.size(edm):\n",
     "        continue\n",
-    "    print(pdb_id)\n",
-    "    cur_time = time.time()\n",
+    "    \n",
+    "    # normalize edm and convert to PDA representation\n",
     "    normalized_edm = proj.normalize_edm(edm)\n",
-    "    print(f\"Normalization: {time.time() - cur_time}\")\n",
-    "    cur_time = time.time()\n",
-    "    pdr = proj.point_density_array(normalized_edm)\n",
-    "    print(f\"PDA: {time.time() - cur_time}\")\n",
-    "    cur_time = time.time()\n",
-    "    pdrs[pdb_id] = pdr"
+    "    pda = proj.point_density_array(normalized_edm)\n",
+    "\n",
+    "    pdas[pdb_id] = pda"
    ]
   },
   {
@@ -162,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then generate m (for now, 3) random projections of each PDA. We save these projections into a pickle."
+    "We then generate $m$ (for now, we take $m=3$) random projections of each PDA. We save these projections into a pickle."
    ]
   },
   {
@@ -248,13 +292,17 @@
    "source": [
     "shape = (256, 256)\n",
     "projection_dict = {}\n",
+    "m = 3\n",
     "\n",
-    "for pdb_id, pdr in pdrs.items():\n",
-    "    cur_time = time.time()\n",
-    "    random_projs = proj.random_projection_pda(pdr, shape=shape, batch_size = 3)\n",
-    "    print(f\"Random projection: {time.time() - cur_time}\")\n",
+    "for pdb_id, pda in pdas.items():\n",
+    "    # generate m random 2D projections of the protein\n",
+    "    random_projs = proj.random_projection_pda(pda, shape=shape, batch_size = m)\n",
+    "\n",
+    "    # visualize the projections\n",
+    "    print(f\"Protein: {pdb_id}\")\n",
     "    for projection in random_projs:\n",
     "        proj.visualize_projection(projection)\n",
+    "    \n",
     "    projection_dict[pdb_id] = random_projs"
    ]
   },
@@ -264,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save the generated projections\n",
     "with open('projections.pickle', 'wb') as handle:\n",
     "    pickle.dump(projection_dict, handle)"
    ]
@@ -281,7 +330,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our methodology involves projecting each 2D image onto a half sphere as shown in the code below. These spherical signals are an input to a spherical CNN from which we extract features that are spatially local. These learned spherical embeddings should encode pose information, and we plan to experiment with the architecture and parameters of the spherical CNN such that this pose information is well captured. Specifically, we hope to show that these embeddings are empirically equivariant. Specifically, an R degree rotation of a 2D random projection should result in an R degree rotation of the corresponding embedding in the learned spherical latent space."
+    "Our methodology involves projecting each 2D image onto a half sphere as shown in the code below. Let us call this spherical projection $s$. These spherical signals are an input to a spherical CNN from which we extract features that are spatially local. Let us call the function learned by the spherical CNN $f$. These learned spherical embeddings should encode pose information, and we plan to experiment with the architecture and parameters of the spherical CNN such that this pose information is well captured. \n",
+    "\n",
+    "Particularly, we hope to show that these embeddings are empirically $SO(3)$-equivariant. Let $R \\in SO(3)$ be a 3D rotation. Then, for the embeddings to be empirically equivariant, we would have $f(s(c_m(RP))) = Rf(s(c_m(P)))$. That is a rotation $R$ of the protein before imaging should result in the same rotation $R$ of the corresponding embedding in the learned spherical latent space. In particular, this means that we should be able to garner information about the relative pose of several 2D images from their spherical embeddings since the total operator $fsc_m$ is (empirically) equivariant.  \n",
+    "\n",
+    "Note that since our imaging and projection ($sc_m$) is fundamentally not $SO(3)$-equivariant, we are not looking for an $SO(3)$-equivariant $f$. Rather, we are looking to learn $f$ such that $fsc$ is approximately equivariant. "
    ]
   },
   {
@@ -536,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
