ground truth generation

--- a/test.ipynb
+++ b/test.ipynb
@@ -20,10 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the electron density map file\n",
-    "with mrcfile.open('emd_0024.map') as mrc:\n",
-    "    map_data = mrc.data\n",
-    "print(map_data.shape)"
+    "\n",
+    "import pickle\n",
+    "with open('ground_truth/test.pickle', 'rb') as pickle_result:\n",
+    "    content = pickle.load(pickle_result)\n",
+    "print(content)"
    ]
   },
   {
@@ -208,11 +209,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Test ground truth generation"
+   ]
   }
  ],
  "metadata": {
