cleaned of projection, started comp essay

--- a/project_draft.ipynb
+++ b/project_draft.ipynb
@@ -269,7 +269,7 @@
     "\n",
     "for pdb_id, pda in pdas.items():\n",
     "    # generate m random 2D projections of the protein\n",
-    "    random_projs = proj.random_projection_pda(pda, shape=shape, batch_size = m)\n",
+    "    random_projs = proj.project_pda_to_image(pda, shape=shape, batch_size = m)\n",
     "\n",
     "    # visualize the projections\n",
     "    print(f\"Protein: {pdb_id}\")\n",
