--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
     "import pickle\n",
     "\n",
     "# load the processed data set\n",
-    "with open('processed_dataset.pickle', 'rb') as datafile:\n",
+    "with open('../data/processed_dataset.pickle', 'rb') as datafile:\n",
     "    processed_dataset = pickle.load(datafile)\n",
     "\n",
     "# print the protein PDBs and content keys\n",
@@ -140,24 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'healpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprojection\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mproj\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# Load the EDM of 6bdf protein and normalized\u001b[39;00m\n\u001b[0;32m      4\u001b[0m edm \u001b[39m=\u001b[39m processed_dataset[\u001b[39m'\u001b[39m\u001b[39m6bdf\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39m3D_map\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\devch\\Documents\\6.S966\\project\\cryo_reconstruction\\src\\projection.py:10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39me3nn\u001b[39;00m \u001b[39mimport\u001b[39;00m o3\n\u001b[0;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorchvision\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransforms\u001b[39;00m \u001b[39mimport\u001b[39;00m ToPILImage\n\u001b[1;32m---> 10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mhealpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mhp\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m sin\n\u001b[0;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m cos\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'healpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import src.projection as proj\n",
+    "# import helper functions from src/projection.py\n",
+    "import projection as proj\n",
     "\n",
     "# Load the EDM of 6bdf protein and normalized\n",
     "edm = processed_dataset['6bdf']['3D_map']\n",
@@ -165,6 +153,32 @@
     "\n",
     "# Generate the sparse point-density array\n",
     "pda = proj.point_density_array(normalized_edm)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see a large decrease in compute and memory requirement achieved as a result of our sparse representation of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sparsity: 9245658/27000000 = 0.3424317777777778 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data efficiency due to sparse representation\n",
+    "print(f\"Sparsity: {pda[0].size}/{edm.size} = {pda[0].size/edm.size} \")"
    ]
   },
   {
