--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,11 @@
     "normalized_edm = proj.normalize_edm(edm)\n",
     "\n",
     "# Generate the sparse point-density array\n",
-    "pda = proj.point_density_array(normalized_edm)"
+    "pda = proj.point_density_array(normalized_edm)\n",
+    "\n",
+    "# save the generated PDA\n",
+    "with open('../data/pda.pickle', 'wb') as pda_file:\n",
+    "    pickle.dump(pda, pda_file)"
    ]
   },
   {
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +190,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We generated 500 orthographic projections from unknown orientations, adding Gaussian noise and blurring effects to simulate real experimental conditions. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work."
+    "We generate 500 orthographic projections from unknown orientations, adding Gaussian noise and blurring effects to simulate real experimental conditions. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the PDA from the saved pickle\n",
+    "with open('pda.pickle', 'rb') as pda_file:\n",
+    "    pda = pickle.load(pda_file)\n",
+    "\n",
+    "shape = (512, 512)\n",
+    "projection_dict = {}\n",
+    "m = 500"
    ]
   },
   {
